<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/first_name_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:boxStrokeColor="#FB4646"
        app:endIconTint="#2C2A2A"
        app:errorEnabled="true"

        app:hintTextColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/first_name_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="text"
            android:textColorHint="@color/red" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/last_name_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:boxStrokeColor="#FB4646"
        app:endIconTint="#2C2A2A"
        app:hintTextColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/first_name_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/last_name_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/last_name"
            android:textColorHint="@color/red"
            android:textColor="#757575"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/license_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:errorEnabled="true"
        app:boxStrokeColor="#FB4646"
        app:endIconTint="#2C2A2A"
        app:hintTextColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name_layout"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/license_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/license"
            android:textColorHint="@color/red"
            android:textColor="#757575"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_code_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:errorEnabled="true"
        app:boxStrokeColor="#FB4646"
        app:endIconTint="#2C2A2A"
        app:hintTextColor="#000000"
        app:layout_constraintTop_toBottomOf="@+id/license_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/sign_up_code"
            android:textColorHint="@color/red"
            android:textColor="#757575"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_email_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:errorEnabled="true"
        app:boxStrokeColor="#FB4646"
        app:endIconTint="#2C2A2A"
        app:hintTextColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_code_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_email_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/email"
            android:textColorHint="@color/red"
            android:textColor="#757575"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:boxStrokeColor="#FB4646"
        app:endIconTint="#2C2A2A"
        app:hintTextColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_email_layout"
        app:errorEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/number_hint"
            android:textColorHint="@color/red"
            android:textColor="#757575"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_up_password_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:boxStrokeColor="#FB4646"
        app:endIconTint="#2C2A2A"
        app:hintTextColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_layout"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_password_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColorHint="@color/red"
            android:textColor="#757575"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="315dp"
        android:layout_height="51dp"
        android:backgroundTint="#DF0029"
        android:text="@string/sign_up"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_password_layout"
        app:layout_constraintVertical_bias="0.437"
        android:onClick="sign_up"
        />

</androidx.constraintlayout.widget.ConstraintLayout>